# Trash_AIRecognition

./: CMakeLists.txt  Main.qml  README.md  imageprocessor.cpp  imageprocessor.h  returnimage.cpp  returnimage.h
Header Files/: garbageclassifier.h  imageprocessor.h  returnimage.h
Source Files/: Main.qml  garbageclassifier.cpp  imageprocessor.cpp  main.cpp  returnimage.cpp
